added AuditForm form

--- a/Resources/views/Audit/index.html.twig
+++ b/Resources/views/Audit/index.html.twig
@@ -1,40 +1,28 @@
-
-{% extends '::base.html.twig' %}
+{% extends 'WGAuditBundle::base.html.twig' %}
 
 {% block body %}
 
-    <p> Case #: {{ audit.salesForceCase }}</p>
-    <p> Engineer: {{ audit.auditor }}</p>
+    <p> Case #: {{ audit.auditReference }}</p>
+    <p> Engineer: {{ audit.auditingUser }}</p>
+    <p> Manager: {{ audit.controlUser }}</p>
+
 
     <table>
-        <tr></tr>
+        <tr>
+            <th>Field number</th>
+            <th>Section Name</th>
+            <th>Score</th>
+            <th>Weight</th>
+            <th>Reviewer's Comment</th>
+        </tr>
     </table>
 
     <table>
-        <tr>
-            <th>Id</th>
-            <th>Question</th>
-            <th>Category</th>
-            <th></th>
-            <th></th>
-            <th>Answer</th>
-        </tr>
-        {% for question in questions %}
-        <tr>
-            <td>{{ question.id }}</td>
-            <td>{{ question.question }}</td>
-            <td>{{ question.category }}</td>
-            <td>[ <a href="{{ path( 'question_delete', { 'id': question.id } ) }}">delete</a> ]</td>
-            <td>[ <a href="{{ path( 'question_edit', { 'id': question.id } ) }}">edit</a> ]</td>
-            <td>[ <a href="{{ path( 'question_view', { 'id': question.id } ) }}">view</a> ]</td>
-        </tr>
-        {% else %}
         <tr>
             <td colspan="6">
                 <p>Nothin yet dude</p>
             </td>
         </tr>
-        {% endfor %}
     </table>
 
 {% endblock %}
