--- a/Resources/views/AuditFormField/index.html.twig
+++ b/Resources/views/AuditFormField/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <h2>Existing Fields:</h2>
+    <h2>Listing Existing Fields:</h2>
 
     <table class="data">
         <thead>
@@ -12,6 +12,10 @@
                 <th>Weight</th>
                 <th>description</th>
                 <th>Scores</th>
+                <th>Fatal</th>
+                <th>View</th>
+                <th>Edit</th>
+                <th>Delete</th>
             </tr>
         </thead>
         <tbody>
@@ -20,8 +24,8 @@
                     <td>{{ field.title }}</td>
                     <td>{{ field.section }}</td>
                     <td>{{ field.weight }}</td>
-                    <td>{{ field.description }}
-                        {% for score, label in field.labels %}
+                    <td>{{ field.description }}</td>
+                    <td>{% for score, label in field.scores %}
                             <div>
                                 {{ score }}: {{ label }}
                             </div>
@@ -29,59 +33,27 @@
                             <div>No scores defined</div>
                         {% endfor %}
                     </td>
+                    <td>{% if field.fatal == 1 %}
+                            <div>Yes</div>
+                        {% else %}
+                            <div>No</div>                        
+                        {% endif %}
+                    </td>
+                    <td>[ <a href="{{ path( 'wgauditformfield_view', { 'id': field.id } ) }}">view</a> ]</td>  
+                    <td>[ <a href="{{ path( 'wgauditformfield_edit', { 'id': field.id } ) }}">edit</a> ]</td>
+                    <td>[ <a href="{{ path( 'wgauditformfield_remove', { 'id': field.id } ) }}">delete</a> ]</td>
                 </tr>
             {% else %}
                 <tr>
-                    <td colspan="4">no sections yet</td>
+                    <td colspan="8" align="center">no fields yet</td>
                 </tr>
             {% endfor %}
+                <tr>
+                    <td colspan="8" align="center">
+                        <a href="{{ path( 'wgauditformfield_add' ) }}">Add a new field</a>
+                    </td>
+                </tr>
         </tbody>
     </table>
         
-    <form method="POST" action="">
-
-        <h2>Add new section:</h2>
-
-        <div class="row input">
-            {{ form_label(form.title) }}
-            {{ form_widget(form.title) }}
-            {{ form_errors(form.title) }}
-
-            {{ form_label(form.section) }}
-            {{ form_widget(form.section) }}
-            {{ form_errors(form.section) }}
-
-            {{ form_label(form.weight) }}
-            {{ form_widget(form.weight) }}
-            {{ form_errors(form.weight) }}
-        </div>
-        <div class="row input">
-            {{ form_label(form.description) }}
-            {{ form_widget(form.description) }}
-            {{ form_errors(form.description) }}
-        </div>
-        <div class="row input">
-            {{ form_label(form.answer_yes) }}
-            {{ form_widget(form.answer_yes) }}
-            {{ form_errors(form.answer_yes) }}
-
-            {{ form_label(form.answer_no) }}
-            {{ form_widget(form.answer_no) }}
-            {{ form_errors(form.answer_no) }}
-
-            {{ form_label(form.answer_acceptable, 'Acceptable') }}
-            {{ form_widget(form.answer_acceptable) }}
-            {{ form_errors(form.answer_acceptable) }}
-
-            {{ form_label(form.answer_not_applicable, 'N/A') }}
-            {{ form_widget(form.answer_not_applicable) }}
-            {{ form_errors(form.answer_not_applicable) }}
-        </div>
-        <div class="row submit">
-            {{ form_rest(form) }}
-            <input type="submit" value="save" class="formbutton save" />
-        </div>
-    
-    </form>
-
 {% endblock %}
