--- a/Resources/views/AuditForm/index.html.twig
+++ b/Resources/views/AuditForm/index.html.twig
@@ -23,18 +23,10 @@
                 </tr>
             {% else %}
                 <tr>
-                    <td colspan="4">no sections yet</td>
+                    <td colspan="4">no forms yet</td>
                 </tr>
             {% endfor %}
         </tbody>
-    </table>
-
-    <table>
-        <tr>
-            <td colspan="3">
-                <p>Nothin yet dude</p>
-            </td>
-        </tr>
     </table>
 
     <form method="POST" action="">
