--- a/Resources/views/AuditFormSection/index.html.twig
+++ b/Resources/views/AuditFormSection/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <h2>Existing Sections:</h2>
+    <h2>Listing existing Sections:</h2>
 
     <table class="data">
         <thead>
