initial styling of the template

--- a/Resources/public/css/audit.css
+++ b/Resources/public/css/audit.css
@@ -1,3 +1,57 @@
 /*.tooltip:hover:after { content: attr(data-tooltip); }*/
 
-h2 {font-size: 20pt; color: red}
+h2 
+{
+    font-size: 20pt; 
+    color: red
+}
+#audit
+{
+    font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
+    width:100%;
+    border-collapse:collapse;
+}
+#audit td, #audit th 
+{
+    font-size:1em;
+    border:1px solid #008209;
+    padding:3px 7px 2px 7px;
+    text-align:center;
+}
+#audit th 
+{
+    font-size:1.1em;
+    padding-top:5px;
+    padding-bottom:4px;
+    background-color:#26972D;
+    color:#ffffff;
+}
+#audit tr.section div.section
+{
+    color:#000000;
+    background-color:#00C90D;
+}
+#audit td.field div.field
+{
+    text-align:left;
+}
+#audit td.final
+{
+    text-align:right;
+}
+
+div.row-header
+{
+    font-size:1.1em;
+    padding-top:5px;
+    padding-bottom:4px;
+    background-color:#26972D;
+    color:#ffffff;    
+    float: left;
+}
+div.row-data
+{
+    
+}
+
+/* something has changed */
