--- a/Resources/views/Audit/add.html.twig
+++ b/Resources/views/Audit/add.html.twig
@@ -6,7 +6,7 @@
 
     <h2>Create new audit</h2>
 
-    <form method="POST" action="">
+    <form id="audit" method="POST" action="">
 
         {% for section in auditform.sections %}
         <h3>Section {{ loop.index }}: {{ section.title }}</h3>
