--- a/Resources/views/Audit/view.html.twig
+++ b/Resources/views/Audit/view.html.twig
@@ -5,9 +5,10 @@
     <p> Case #: {{ audit.auditReference }}</p>
     <p> Engineer: {{ audit.auditingUser }}</p>
     <p> Manager: {{ audit.controlUser }}</p>
+    <p> Audit Form: {{ audit.auditForm }}</p>
 
 
-    <table>
+    <table id="audit">
         <tr>
             <th>Field number</th>
             <th>Section Name</th>
