--- a/Resources/views/AuditForm/index.html.twig
+++ b/Resources/views/AuditForm/index.html.twig
@@ -4,7 +4,7 @@
 
     <h2>Listing Existing Forms:</h2>
 
-    <table class="data">
+    <table id="audit">
         <thead>
             <tr>
                 <th>Title</th>
