--- a/Resources/views/AuditForm/view.html.twig
+++ b/Resources/views/AuditForm/view.html.twig
@@ -8,7 +8,7 @@
     <div>Is the form active: {% if  form.active == 1 %}yes{% else %}No{% endif %}</div>
     <div>Description: {{ form.description }}</div>
 
-    <table class="data">
+    <table id="audit">
         <thead>
             <tr>
                 <th>Title</th>
