--- a/Resources/views/AuditFormSection/view.html.twig
+++ b/Resources/views/AuditFormSection/view.html.twig
@@ -8,7 +8,7 @@
     <div>Form: {{ section.auditform }}</div>
     <div>Description: {{ section.description }}</div>
 
-        <table class="data">
+        <table id="audit">
             <thead>
                 <tr>
                     <th>Title</th>
