--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -14,6 +14,7 @@
     <a href="{{ path( 'wgauditformfields' ) }}">view field list</a>
     {% endblock %}
     {% block stylesheets %}
+        <link href="{{ asset('bundles/wgaudit/css/audit.css') }}" type="text/css" rel="stylesheet" />
     {% endblock %}
     {% block conditionals %}
     {% endblock %}
