--- a/Resources/views/AuditFormField/edit.html.twig
+++ b/Resources/views/AuditFormField/edit.html.twig
@@ -35,15 +35,18 @@
             {{ form_label(form.answer_yes) }}
             {{ form_widget(form.answer_yes) }} 
             {{ form_errors(form.answer_yes) }}
-
+        </div>
+        <div class="row submit">
             {{ form_label(form.answer_no) }}
             {{ form_widget(form.answer_no) }} 
             {{ form_errors(form.answer_no) }}
-
+        </div>
+        <div class="row submit">
             {{ form_label(form.answer_acceptable) }}
             {{ form_widget(form.answer_acceptable) }} 
             {{ form_errors(form.answer_acceptable) }}
-
+        </div>
+        <div class="row submit">
             {{ form_label(form.answer_not_applicable) }}
             {{ form_widget(form.answer_not_applicable) }} 
             {{ form_errors(form.answer_not_applicable) }}
